# src/models/index.ts
@@ -33,7 +33,6 @@ export * from "./keyinfo.js";
 export * from "./message.js";
 export * from "./modelslist.js";
 export * from "./namedtoolchoice.js";
-export * from "./openairesponsesrequest.js";
 export * from "./responseeasyinputmessage.js";
 export * from "./responseformatjsonobject.js";
 export * from "./responseformatjsonschema.js";
@@ -86,9 +85,7 @@ export * from "./responsetextverbosity.js";
 export * from "./security.js";
 export * from "./systemmessage.js";
 export * from "./tool.js";
-export * from "./toolchoice.js";
-export * from "./toolchoicefunction.js";
-export * from "./toolchoicetypes.js";
 export * from "./toolchoicetypeunion.js";
+export * from "./toolchoiceunion.js";
 export * from "./toolresponsemessage.js";
 export * from "./usermessage.js";
