# src/models/toolchoicefunction.ts
@@ -1,100 +1,0 @@
-/*
- * Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
- */
-
-import * as z from "zod";
-import { safeParse } from "../lib/schemas.js";
-import { ClosedEnum } from "../types/enums.js";
-import { Result as SafeParseResult } from "../types/fp.js";
-import { SDKValidationError } from "./errors/sdkvalidationerror.js";
-
-export const ToolChoiceFunctionType = {
-  Function: "function",
-} as const;
-export type ToolChoiceFunctionType = ClosedEnum<typeof ToolChoiceFunctionType>;
-
-/**
- * Specific function tool choice
- */
-export type ToolChoiceFunction = {
-  type: ToolChoiceFunctionType;
-  name: string;
-};
-
-/** @internal */
-export const ToolChoiceFunctionType$inboundSchema: z.ZodNativeEnum<
-  typeof ToolChoiceFunctionType
-> = z.nativeEnum(ToolChoiceFunctionType);
-
-/** @internal */
-export const ToolChoiceFunctionType$outboundSchema: z.ZodNativeEnum<
-  typeof ToolChoiceFunctionType
-> = ToolChoiceFunctionType$inboundSchema;
-
-/**
- * @internal
- * @deprecated This namespace will be removed in future versions. Use schemas and types that are exported directly from this module.
- */
-export namespace ToolChoiceFunctionType$ {
-  /** @deprecated use `ToolChoiceFunctionType$inboundSchema` instead. */
-  export const inboundSchema = ToolChoiceFunctionType$inboundSchema;
-  /** @deprecated use `ToolChoiceFunctionType$outboundSchema` instead. */
-  export const outboundSchema = ToolChoiceFunctionType$outboundSchema;
-}
-
-/** @internal */
-export const ToolChoiceFunction$inboundSchema: z.ZodType<
-  ToolChoiceFunction,
-  z.ZodTypeDef,
-  unknown
-> = z.object({
-  type: ToolChoiceFunctionType$inboundSchema,
-  name: z.string(),
-});
-
-/** @internal */
-export type ToolChoiceFunction$Outbound = {
-  type: string;
-  name: string;
-};
-
-/** @internal */
-export const ToolChoiceFunction$outboundSchema: z.ZodType<
-  ToolChoiceFunction$Outbound,
-  z.ZodTypeDef,
-  ToolChoiceFunction
-> = z.object({
-  type: ToolChoiceFunctionType$outboundSchema,
-  name: z.string(),
-});
-
-/**
- * @internal
- * @deprecated This namespace will be removed in future versions. Use schemas and types that are exported directly from this module.
- */
-export namespace ToolChoiceFunction$ {
-  /** @deprecated use `ToolChoiceFunction$inboundSchema` instead. */
-  export const inboundSchema = ToolChoiceFunction$inboundSchema;
-  /** @deprecated use `ToolChoiceFunction$outboundSchema` instead. */
-  export const outboundSchema = ToolChoiceFunction$outboundSchema;
-  /** @deprecated use `ToolChoiceFunction$Outbound` instead. */
-  export type Outbound = ToolChoiceFunction$Outbound;
-}
-
-export function toolChoiceFunctionToJSON(
-  toolChoiceFunction: ToolChoiceFunction,
-): string {
-  return JSON.stringify(
-    ToolChoiceFunction$outboundSchema.parse(toolChoiceFunction),
-  );
-}
-
-export function toolChoiceFunctionFromJSON(
-  jsonString: string,
-): SafeParseResult<ToolChoiceFunction, SDKValidationError> {
-  return safeParse(
-    jsonString,
-    (x) => ToolChoiceFunction$inboundSchema.parse(JSON.parse(x)),
-    `Failed to parse 'ToolChoiceFunction' from JSON`,
-  );
-}
